--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "chart.js": "^2.8.0",
+    "chartjs": "^0.3.24",
     "country-data-list": "^1.1.2",
     "country-list": "^2.1.1",
     "history": "^4.9.0",
     "react": "^16.8.6",
+    "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
     "react-google-charts": "^3.0.13",
     "react-jvectormap": "0.0.12",
